src/objects/Aircraft__c.object
<CustomObject>
    <fields>
        <fullName>Business_seats__c</fullName>
        <label>Business seats</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Economy_seats__c</fullName>
        <label>Economy seats</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Aircraft</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Aircraft Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aircrafts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Sits_greater_0</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Business_seats__c  &lt; 0, Economy_seats__c  &lt; 0)</errorConditionFormula>
        <errorMessage>Seats can not be lass than zero</errorMessage>
    </validationRules>
</CustomObject>